--- a/notes-vue-app/src/styles/pages/main-page.scss
+++ b/notes-vue-app/src/styles/pages/main-page.scss
@@ -1,7 +1,8 @@
 .main-page {
   @include default-flex-centered-column;
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
+  height: 100%;
   background-color: $color-solitude;
 
   &__title {
